Used the animationend event to ensure that the cart sidebar slides out of view before removing it from the DOM

--- a/src/styles/cartSidebarStyles.css
+++ b/src/styles/cartSidebarStyles.css
@@ -1,12 +1,32 @@
 .cart-sidebar {
   height: 100%;
-  width: 40%;
+  width: 100%;
+  max-width: 50rem;
   position: fixed;
   top: 0;
   right: 0%;
   z-index: 1;
   background-color: white;
   animation: slideIn 1s;
+  box-shadow: 0px 0px 10px 1px rgb(40, 40, 40);
+}
+
+.cart-sidebar.hidden {
+  right: -100%;
+  animation: slideOut 1s;
+}
+
+.cart-sidebar__close {
+  position: absolute;
+  top: 1rem;
+  left: 2rem;
+  font-size: 3rem;
+  color: rgb(40, 40, 40);
+}
+
+.cart-sidebar__close:hover {
+  color: rgb(80, 80, 80);
+  cursor: pointer;
 }
 
 @keyframes slideIn {
@@ -16,5 +36,14 @@
 
   100% {
     right: 0%;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    right: 0%;
+  }
+  100% {
+    right: -100%;
   }
 }
